# personalized-news-dispatcher

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  uwsgi.ini
config/: settings.py  urls.py
core/: arxiv_api.py  cinii_api.py  context_processors.py  fetchers.py  google_news_api.py  services.py  tests.py  translation.py
core/management/commands/: test_translation.py  update_site.py
core/templates/core/: base.html
data/: arxiv_keywords.json  categories.json  cinii_keywords.json
docs/: SPECIFICATION.md  USER_MANUAL.md
news/: admin.py  models.py  tests.py  urls.py  views.py
news/templates/news/: tracking_redirect.html
news/templates/news/email/: news_digest_email.html  news_digest_email.txt
subscriptions/: admin.py  fetchers.py  forms.py  models.py  services.py  tests.py  urls.py  views.py
subscriptions/fixtures/: init_data.json
subscriptions/management/commands/: clean_category_names.py  send_articles.py  send_daily_news.py  send_recommendations.py  test_send_articles.py  update_arxiv_keywords.py  update_categories.py  update_cinii_keywords.py
subscriptions/templates/subscriptions/: queryset_confirm_delete.html  queryset_form.html  queryset_list.html
subscriptions/templates/subscriptions/email/: recommendation_email.html  recommendation_email.txt
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: list_users.py
users/templates/users/: login.html  login_failed.html  login_link_sent.html  user_settings.html  user_settings_success.html
